public/css/form.css
@font-face { font-family: Rosie; src: url('../fonts/childline/Rosie/rosie-regular-webfont.woff2'); }
@font-face { font-family: childline-bold; src: url('../fonts/childline/Childline/ChildlineWeb/ChildlineWeb-Bold.otf'); }

.content {
/*  max-width: 90%;*/
  /*margin: 1rem auto;*/
  padding-bottom: 1.5rem;
}

.title-div > h2{
  margin:0;
}

.title-div{
  background-color: #ED5753;
  color:white;
  font-family: 'childline-bold';
  text-align: center;
  padding: 4rem 1rem 2.5rem 1rem;
}

.form-container{
  max-width: 90%;
  margin: 0 auto;
  padding: 1rem;
  margin-bottom: 1.5rem;
  margin-top: 1.5rem;
  background-color: #CCECF5;
}

.other-options{
  max-width: 90%;
  margin:0 auto;
  background-color: rgba(35, 79, 98, 1);
  color:white;
  padding:0.75rem;
  font-size: 1.2rem;
  display: flex;
  align-items: center;
}

.info{
  height:100%;
  max-width: 30%;
  display: inline-block;
  float:left;
}

.info-message{
  padding-left: 1rem;
  max-width: 70%;
  display: inline-block;
  float:right;
}

form{
  padding:0.35rem;
}

label{
  font-size:1.3rem !important;
  width:100%;
  display: inline-block!important;
  white-space: normal;
  word-wrap: break-word !important;
  color: black !important;
}

label:after {
  margin-top: 0.6rem;
}

[type="checkbox"].filled-in:checked+label:after {
  background-color: #632c7a;
  border: 2px solid #632c7a;
}


[type="checkbox"]:checked+label:before {
  margin-top: 0.7rem;
}

form >p{
  font-size: 1.5rem;
  background-color: white;
  margin:0.25rem 0;
  padding:0.5rem 1rem;
}

.purp {
  background-color: #632c7a;
}

.input-field{
    font-size: 1.5rem;
    background-color: white;
    margin:0.25rem 0;
    padding:0.5rem 1rem;
}

.report-submit{
  margin-top:1.5rem;
}
p{
  font-size: 1.5rem;
}

#description{
  min-height: 6rem;
}


/*OLD styling*/

.background-pink {
  background-color: #fbdedd;
  padding: 1rem;
}
.old-title {
  font-family: 'Rosie';
  color:white;
}

.old-title-p {
  color: white;
  font-size: 1.3rem;
}

.old-info {
  background-color: white;
  margin: 1rem;
  box-sizing: border-box;
  padding: 1rem;
  color: #fff;
}

.old-info h3 {
  font-family: 'childline-bold';
  font-size: 1.6rem;
  margin: 0;
  width: 90%;
  float:left;
  color: #ED5753
}

.old-info p {
  padding-top: 1.2rem;
  margin: 0;
  margin-bottom: 1rem;
  font-size: 1.2rem;
  color: #ED5753;
}

.identity {
  width: 10%;
  text-align: right;
  color: #ED5753;
}

